[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nogawanogawa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feast = {extras = ["gcp"], version = "^0.34.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
